2004-10-30	blytkerchan
	* compare_and_exchange.c (compare_and_exchange_ptr): make prototype
	the same as in compare_and_exchange.h
	(compare_and_exchange_int): ditto

2004-10-26	blytkerchan
	* version: new file
	* module.mk: ditto
	* compare_and_exchange.c: include proper (own) header file
	* fetch_and_add.c: ditto
	* membar.c: ditto
	* swap.c: ditto
	* decrement.c: ditto
	* increment.c: ditto
	* set.c: ditto

2004-09-13	blytkerchan
	* set.c (atomic_set): make static
	(atomic_set_ptr): new function
	(atomic_set): ditto

2004-09-12	blytkerchan
	* membar.c: new file

2004-09-01	blytkerchan
	* swap.c: new file

2004-08-11	blytkerchan
	* compare_and_exchange.c (compare_and_exchange_int): add semicolon

	* fetch_and_add.c (fetch_and_add): call compare_and_exchange_int in
	stead of compare_and_exchange

	* compare_and_exchange.c (compare_and_exchange_ptr): move from
	compare_and_exchange
	(compare_and_exchange_int): new function

2004-08-10	blytkerchan
	* fetch_and_add.c (fetch_and_add): no longer cast third param of
	compare_and_exchange
	(compare_and_exchange): change prototype
	rename src_ptr to src

	* fetch_and_add.c (fetch_and_add): make first param volatile

2004-08-03	blytkerchan
	* fetch_and_add.c: use full path for headers
	(fetch_and_add): cast last argument for compare_and_exchange to void*

2004-08-02	blytkerchan
	* fetch_and_add.c: add necessary headers

	* fetch_and_add.c: new file

2004-04-12	blytkerchan
	* set.c: new file

2004-04-08	blytkerchan
	* compare_and_exchange.c: add 2004 to the license years
	* decrement.c: ditto
	* increment.c: ditto

2004-03-09	blytkerchan
	* increment.c (atomic_increment): re-implement so it'll work when not optimizing
	* decrement.c (atomic_decrement): ditto

2004-02-03	blytkerchan
	* increment.c (atomic_increment): don't return a value
	* decrement.c (atomic_decrement): ditto

2003-01-06	blytkerchan
	* increment.c: new file
	* decrement.c: ditto

2003-10-18	blytkerchan
	* main.c: moved to ../test
	* Makefile: removed