@@ -36,9 +36,8 @@
 
 void atomic_decrement(uint32_t * target)
 {
-	asm("movl %1, %%eax\nlock decl (%%eax)" 
-	: "=m" (target)
-	: "0" (target)
-	: "eax");	
+	asm("lock decl (%1)" 
+	: "=m" (*target) 
+	: "r" (target) );       
 }
 
